--- a/src/CSP2.Desktop/App.xaml
+++ b/src/CSP2.Desktop/App.xaml
@@ -1,12 +1,21 @@
 <Application x:Class="CSP2.Desktop.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="clr-namespace:CSP2.Desktop.Converters"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/ButtonStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            
+            <!-- 值转换器 -->
+            <converters:StatusToColorConverter x:Key="StatusToColorConverter"/>
+            <converters:StatusToTextConverter x:Key="StatusToTextConverter"/>
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+            <converters:CountToVisibilityConverter x:Key="CountToVisibilityConverter"/>
+            <converters:LogLevelToColorConverter x:Key="LogLevelToColorConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
