--- a/src/CSP2.Desktop/Views/Pages/LogConsolePage.xaml
+++ b/src/CSP2.Desktop/Views/Pages/LogConsolePage.xaml
@@ -1,12 +1,12 @@
-<Page x:Class="CSP2.Desktop.Views.Pages.LogConsolePage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:viewmodels="clr-namespace:CSP2.Desktop.ViewModels"
-      d:DataContext="{d:DesignInstance Type=viewmodels:LogConsoleViewModel}"
-      mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="900">
+<UserControl x:Class="CSP2.Desktop.Views.Pages.LogConsolePage"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:viewmodels="clr-namespace:CSP2.Desktop.ViewModels"
+             d:DataContext="{d:DesignInstance Type=viewmodels:LogConsoleViewModel}"
+             mc:Ignorable="d" 
+             d:DesignHeight="600" d:DesignWidth="900">
 
     <Grid Margin="30">
         <Grid.RowDefinitions>
@@ -193,5 +193,5 @@
                        Margin="0,5,0,0"/>
         </StackPanel>
     </Grid>
-</Page>
+</UserControl>
 
