--- a/src/CSP2.Desktop/Views/Pages/ServerInstallPage.xaml
+++ b/src/CSP2.Desktop/Views/Pages/ServerInstallPage.xaml
@@ -356,7 +356,7 @@
                     </StackPanel>
 
                     <!-- 配置说明 -->
-                    <Border Background="{StaticResource InfoPaleBrush}"
+                    <Border Background="{StaticResource InfoLightBrush}"
                             CornerRadius="12"
                             Padding="20"
                             Margin="0,0,0,24">
